# NostalgiaForInfinity

./: .pre-commit-config.yaml  docker-image.yml  dockerfile  dockerfile.txt  import.py  main.py  pyproject.toml  requirements.txt  temp
.github/workflows/: docker-image.yml  dockerfile  main.py
testenv/: pyvenv.cfg
testenv/Scripts/: activate  activate.bat
user_data/: requirements.txt
