[project]
name = "NostalgiaForInfinity"
description = "Trading strategy for the Freqtrade crypto bot"
homepage = "https://github.com/iterativv/NostalgiaForInfinity"
dependencies = ["freqtrade"]
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 119
target-version = ["py312"]
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
atomic = true
profile = "black"
line-length = 119
skip-gitignore = true
multi_line_output = 0
lines_after_imports = 2
skip_glob = ["**/.env*", "**/env/*", "**/.venv/*", "**/docs/*", "**/user_data/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.flake8]
max-line-length = 119
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503", "E712", "E713"]
exclude = [".git", "__pycache__", "dist"]
max-complexity = 12

[tool.ruff]
line-length = 119
target-version = "py312"
fix = true
extend-exclude = [".env", ".venv"]
select = ["E4", "E9", "F", "B", "Q"]
unfixable = ["B", "E"]
ignore = [
  "F821",  # Undefined name
  "F841",  # Local variable is assigned to but never used
]
exclude = [
  "user_data/*",
  "env",
]

# بخش `tool.ruff.format` حذف شده است تا از خطا جلوگیری شود.
